import { Mooring } from "./mooring";

export interface Boat{
    id:number,
    name:string,
    mooring:Mooring
}