export interface Boatman{
    emailaddress: string,
    surname:string,
    familyname:string,
    phone:string
}