export interface Mooring{
    id:number,
    name:string,
    streetAdress:string,
    latitude:number,
    longitude:number
}